 + added new translations of the contraint violation messages:
   + Chinese (thanks to kindloaf)
   + Dutch (thanks to miep)
   + Hungarian (thanks to Gabor Nagy)
   + Italian (thanks to Mastermind X)
   + Romanian (thanks to A. Mate)
   + Russian (thanks to Andrey Qwerty)
   + Spanish (thanks to Luis Garcia Sevillano)
   + Swedish (thanks to Johan Hedberg)

2007-07-22 v1.0
===============
Annotation configuration:
 - JPAAnnotationsConfigurer does not configure a NotNullCheck for fields with @Column(nullable=false)
   that also have @javax.persistence.GeneratedValue or @javax.persistence.Version specified 
 * renamed @Guarded.applyFieldConstraintsToSetter to @Guarded.applyFieldConstraintsToSetters
 + added @Guarded.applyFieldConstraintsToConstructors to @Guarded.applyFieldConstraintsToConstructors
 * JPAAnnotationsConfigurer constraint mappings extended:
	@javax.persistence.OneToOne  => @net.sf.oval.constraints.AssertValid
	@javax.persistence.OneToMany => @net.sf.oval.constraints.AssertValid
	@javax.persistence.ManyToOne => @net.sf.oval.constraints.AssertValid

Built-in constraints:
 + added @net.sf.oval.constraint.NotBlank (thanks to Dennis Kieselhorst)

Expression languages:
 + added support for OGNL as expression language
 + added support for MVEL as expression language

XML configuration:
 - fixed some issues with the XML configuration DTD (e.g. [ Bug 1728672 ])

Other changes:
 + localization support for several exception types added
 + added static Validator.getCollectionFactory method
 + added static Validator.setCollectionFactory method
 * made Validator.setMessageResolver method static
 * made Validator.getMessageResolver method static
 * moved net.sf.oval.collection.CollectionFactoryHolder to net.sf.oval.internal
 - fixed a StackOverflowError that occured during invariant checking for 
   guarded classes that override the hashCode() method (thanks to io_exception)
 + documentation improved


2007-03-18 v0.9
===============
Built-in constraints: