@@ -19,11 +19,11 @@ import java.util.List;
 
 import junit.framework.TestCase;
 import net.sf.oval.ConstraintViolation;
+import net.sf.oval.ConstraintsViolatedException;
 import net.sf.oval.constraint.NotNullCheck;
 import net.sf.oval.context.ConstructorParameterContext;
 import net.sf.oval.context.MethodParameterContext;
 import net.sf.oval.exception.InvalidConfigurationException;
-import net.sf.oval.guard.ConstraintsViolatedException;
 import net.sf.oval.guard.Guard;
 import net.sf.oval.guard.Guarded;
 
@@ -95,11 +95,11 @@ public class AddingChecksTest extends TestCase
 	public void addConstraintToMethodParameter()
 	{
 		Guard guard = TestGuardAspect.aspectOf().getGuard();
-		
+
 		try
 		{
 			Method setter = TestEntity1.class.getDeclaredMethod("setName",
-					new Class<?>[]{String.class});
+					new Class< ? >[]{String.class});
 			NotNullCheck notNullCheck = new NotNullCheck();
 			notNullCheck.setMessage("NOT_NULL");
 
@@ -113,7 +113,7 @@ public class AddingChecksTest extends TestCase
 			{
 				fail();
 			}
-			
+
 			// adding a constraint
 			guard.addChecks(setter, 0, notNullCheck);
 			try
@@ -165,14 +165,15 @@ public class AddingChecksTest extends TestCase
 	{
 		final Guard guard = new Guard();
 		TestGuardAspect.aspectOf().setGuard(guard);
-		
-		Constructor constructor = TestEntity2.class.getDeclaredConstructor(new Class<?>[]{String.class});
+
+		Constructor constructor = TestEntity2.class
+				.getDeclaredConstructor(new Class< ? >[]{String.class});
 		NotNullCheck notNullCheck = new NotNullCheck();
 		notNullCheck.setMessage("NOT_NULL");
 
 		// testing without constraint
 		new TestEntity2(null);
-		
+
 		// adding a constraint
 		guard.addChecks(constructor, 0, notNullCheck);
 		try
@@ -190,7 +191,7 @@ public class AddingChecksTest extends TestCase
 
 		// removing the constraint
 		guard.removeChecks(constructor, 0, notNullCheck);
-		
+
 		new TestEntity2(null);
 	}
 
@@ -201,7 +202,7 @@ public class AddingChecksTest extends TestCase
 	{
 		final Guard guard = new Guard();
 		TestGuardAspect.aspectOf().setGuard(guard);
-		
+
 		TestEntity3 entity = new TestEntity3(null);
 		assertEquals(0, guard.validate(entity).size());
 
@@ -214,12 +215,13 @@ public class AddingChecksTest extends TestCase
 			List<ConstraintViolation> violations = guard.validate(entity);
 			assertTrue(violations.size() == 0);
 		}
-		
+
 		// adding a constraint
 		{
 			guard.addChecks(field, notNullCheck);
 
-			List<ConstraintViolation> violations = TestGuardAspect.aspectOf().getGuard().validate(entity);
+			List<ConstraintViolation> violations = TestGuardAspect.aspectOf().getGuard().validate(
+					entity);
 			assertTrue(violations.size() == 1);
 			assertTrue(violations.get(0).getMessage().equals("NOT_NULL"));
 		}
@@ -228,7 +230,8 @@ public class AddingChecksTest extends TestCase
 		{
 			guard.removeChecks(field, notNullCheck);
 
-			List<ConstraintViolation> violations = TestGuardAspect.aspectOf().getGuard().validate(entity);
+			List<ConstraintViolation> violations = TestGuardAspect.aspectOf().getGuard().validate(
+					entity);
 			assertTrue(violations.size() == 0);
 		}
 	}
