@@ -3,11 +3,11 @@
  */
 package net.sf.oval.test.guard;
 
+import junit.framework.TestCase;
+import net.sf.oval.ConstraintsViolatedException;
 import net.sf.oval.constraint.NotNull;
-import net.sf.oval.guard.ConstraintsViolatedException;
 import net.sf.oval.guard.Guard;
 import net.sf.oval.guard.Guarded;
-import junit.framework.TestCase;
 
 /**
  * @author Sebastian Thomschke
