@@ -14,11 +14,11 @@ package net.sf.oval.test.guard;
 
 import junit.framework.TestCase;
 import net.sf.oval.ConstraintViolation;
+import net.sf.oval.ConstraintsViolatedException;
 import net.sf.oval.constraint.NotNull;
 import net.sf.oval.context.FieldContext;
 import net.sf.oval.context.MethodParameterContext;
 import net.sf.oval.guard.ConstraintsViolatedAdapter;
-import net.sf.oval.guard.ConstraintsViolatedException;
 import net.sf.oval.guard.Guarded;
 import net.sf.oval.guard.PostValidateThis;
 import net.sf.oval.guard.PreValidateThis;
@@ -108,7 +108,7 @@ public class PrePostValidateThisTest extends TestCase
 		t.setNamePost(null);
 		assertTrue(va.getConstraintsViolatedExceptions().size() == 0);
 
-		// test setter 
+		// test setter
 		t.setName("the name");
 		assertTrue(va.getConstraintsViolatedExceptions().size() == 0);
 		assertTrue(va.getConstraintViolations().size() == 0);
